# aps01-api-rest-postgre

./: README.md  pyproject.toml
src/: server.py
