[tool.poetry]
name = "aps01-api"
version = "0.1.0"
description = "APS Final Quarto periodo 2023"
authors = ["andre <andre.gorlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
sqlmodel = "^0.0.12"
uvicorn = "^0.24.0.post1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
